# bin/swagger.json
@@ -6,130 +6,33 @@
 		"requestBodies": {},
 		"responses": {},
 		"schemas": {
-			"FieldRequest": {
-				"properties": {
-					"type": {
-						"type": "string"
-					},
-					"domain": {
-						"type": "string"
-					},
-					"url": {
-						"type": "string"
-					},
-					"selectors": {
-						"type": "string"
-					}
-				},
-				"required": [
-					"type",
-					"domain",
-					"url",
-					"selectors"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
-			"Pick6Request": {
-				"properties": {
-					"email": {
-						"type": "string"
-					},
-					"subscribers": {
-						"properties": {
-							"lastName": {
-								"type": "string"
-							},
-							"firstName": {
-								"type": "string"
-							}
-						},
-						"required": [
-							"lastName",
-							"firstName"
-						],
-						"type": "object"
-					},
-					"subscription": {
-						"items": {
-							"type": "string"
-						},
-						"type": "array"
-					},
-					"price": {
-						"type": "number",
-						"format": "double"
-					},
-					"isRegistered": {
-						"type": "boolean"
-					}
-				},
-				"required": [
-					"email",
-					"subscribers",
-					"subscription",
-					"isRegistered"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
-			"ICreatePick6Request": {
-				"properties": {
-					"email": {
-						"type": "string"
-					},
-					"subscribers": {
-						"properties": {
-							"lastName": {
-								"type": "string"
-							},
-							"firstName": {
-								"type": "string"
-							}
-						},
-						"required": [
-							"lastName",
-							"firstName"
-						],
-						"type": "object"
-					},
-					"subscription": {
-						"items": {
-							"type": "string"
-						},
-						"type": "array"
-					}
-				},
-				"required": [
-					"email",
-					"subscribers",
-					"subscription"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
-			"User": {
+			"Book": {
 				"properties": {
 					"id": {
 						"type": "number",
 						"format": "double"
 					},
-					"firstName": {
+					"name": {
 						"type": "string"
 					},
-					"lastName": {
+					"isbn": {
 						"type": "string"
 					},
-					"age": {
-						"type": "number",
-						"format": "double"
+					"regDate": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"createdAt": {
+						"type": "string",
+						"format": "date-time"
 					}
 				},
 				"required": [
 					"id",
-					"firstName",
-					"lastName",
-					"age"
+					"name",
+					"isbn",
+					"regDate",
+					"createdAt"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -138,15 +41,15 @@
 		"securitySchemes": {}
 	},
 	"info": {
-		"title": "nickl-extras",
+		"title": "node-app",
 		"version": "1.0.0",
 		"contact": {}
 	},
 	"openapi": "3.0.0",
 	"paths": {
-		"/fields/{domain}": {
+		"/books": {
 			"get": {
-				"operationId": "GetFields",
+				"operationId": "GetBooks",
 				"responses": {
 					"200": {
 						"description": "Ok",
@@ -154,250 +57,7 @@
 							"application/json": {
 								"schema": {
 									"items": {
-										"$ref": "#/components/schemas/FieldRequest"
-									},
-									"type": "array"
-								}
-							}
-						}
-					}
-				},
-				"security": [],
-				"parameters": [
-					{
-						"in": "path",
-						"name": "domain",
-						"required": true,
-						"schema": {
-							"type": "string"
-						}
-					}
-				]
-			}
-		},
-		"/fields": {
-			"post": {
-				"operationId": "CreateField",
-				"responses": {
-					"201": {
-						"description": "Created",
-						"content": {
-							"application/json": {
-								"schema": {
-									"$ref": "#/components/schemas/FieldRequest"
-								}
-							}
-						}
-					}
-				},
-				"security": [],
-				"parameters": [],
-				"requestBody": {
-					"required": true,
-					"content": {
-						"application/json": {
-							"schema": {
-								"$ref": "#/components/schemas/FieldRequest"
-							}
-						}
-					}
-				}
-			}
-		},
-		"/fields/{id}": {
-			"delete": {
-				"operationId": "DeleteField",
-				"responses": {
-					"204": {
-						"description": "No content"
-					}
-				},
-				"security": [],
-				"parameters": [
-					{
-						"in": "path",
-						"name": "id",
-						"required": true,
-						"schema": {
-							"format": "int32",
-							"type": "integer",
-							"minimum": 1
-						}
-					}
-				]
-			},
-			"patch": {
-				"operationId": "UpdateField",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"$ref": "#/components/schemas/FieldRequest"
-								}
-							}
-						}
-					}
-				},
-				"security": [],
-				"parameters": [
-					{
-						"in": "path",
-						"name": "id",
-						"required": true,
-						"schema": {
-							"format": "double",
-							"type": "number"
-						}
-					}
-				],
-				"requestBody": {
-					"required": true,
-					"content": {
-						"application/json": {
-							"schema": {}
-						}
-					}
-				}
-			}
-		},
-		"/pick6/registration": {
-			"get": {
-				"operationId": "GetPick6s",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"items": {
-										"$ref": "#/components/schemas/Pick6Request"
-									},
-									"type": "array"
-								}
-							}
-						}
-					}
-				},
-				"security": [],
-				"parameters": [
-					{
-						"in": "query",
-						"name": "id",
-						"required": false,
-						"schema": {
-							"format": "double",
-							"type": "number"
-						}
-					},
-					{
-						"in": "query",
-						"name": "showCompleted",
-						"required": false,
-						"schema": {
-							"type": "boolean"
-						}
-					}
-				]
-			},
-			"post": {
-				"operationId": "CreatePick6",
-				"responses": {
-					"201": {
-						"description": "Created",
-						"content": {
-							"application/json": {
-								"schema": {
-									"$ref": "#/components/schemas/Pick6Request"
-								}
-							}
-						}
-					}
-				},
-				"security": [],
-				"parameters": [],
-				"requestBody": {
-					"required": true,
-					"content": {
-						"application/json": {
-							"schema": {
-								"$ref": "#/components/schemas/ICreatePick6Request"
-							}
-						}
-					}
-				}
-			}
-		},
-		"/pick6/registration/{id}": {
-			"delete": {
-				"operationId": "DeletePick6",
-				"responses": {
-					"204": {
-						"description": "No content"
-					}
-				},
-				"security": [],
-				"parameters": [
-					{
-						"in": "path",
-						"name": "id",
-						"required": true,
-						"schema": {
-							"format": "int32",
-							"type": "integer",
-							"minimum": 1
-						}
-					}
-				]
-			},
-			"patch": {
-				"operationId": "UpdatePick6",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"$ref": "#/components/schemas/Pick6Request"
-								}
-							}
-						}
-					}
-				},
-				"security": [],
-				"parameters": [
-					{
-						"in": "path",
-						"name": "id",
-						"required": true,
-						"schema": {
-							"format": "double",
-							"type": "number"
-						}
-					}
-				],
-				"requestBody": {
-					"required": true,
-					"content": {
-						"application/json": {
-							"schema": {}
-						}
-					}
-				}
-			}
-		},
-		"/users": {
-			"get": {
-				"operationId": "GetUsers",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"items": {
-										"$ref": "#/components/schemas/User"
+										"$ref": "#/components/schemas/Book"
 									},
 									"type": "array"
 								}
@@ -409,14 +69,14 @@
 				"parameters": []
 			},
 			"post": {
-				"operationId": "CreateUser",
+				"operationId": "CreateBook",
 				"responses": {
 					"201": {
 						"description": "Created",
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/User"
+									"$ref": "#/components/schemas/Book"
 								}
 							}
 						}
@@ -434,16 +94,16 @@
 				}
 			}
 		},
-		"/users/{id}": {
+		"/books/{id}": {
 			"get": {
-				"operationId": "GetUserById",
+				"operationId": "GetBookById",
 				"responses": {
 					"200": {
 						"description": "Ok",
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/User"
+									"$ref": "#/components/schemas/Book"
 								}
 							}
 						}
@@ -464,7 +124,7 @@
 				]
 			},
 			"delete": {
-				"operationId": "DeleteUser",
+				"operationId": "DeleteBook",
 				"responses": {
 					"204": {
 						"description": "No content"
@@ -485,14 +145,14 @@
 				]
 			},
 			"patch": {
-				"operationId": "UpdateUser",
+				"operationId": "UpdateBook",
 				"responses": {
 					"200": {
 						"description": "Ok",
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/User"
+									"$ref": "#/components/schemas/Book"
 								}
 							}
 						}
