# src/models/users.ts
@@ -1,18 +1,0 @@
-import {Entity, BaseEntity, PrimaryGeneratedColumn, Column} from "typeorm";
-
-@Entity()
-export class User extends BaseEntity {
-
-    @PrimaryGeneratedColumn()
-    id: number;
-
-    @Column()
-    firstName: string;
-
-    @Column()
-    lastName: string;
-
-    @Column()
-    age: number;
-
-}
